[tool.poetry]
name = "roslaunch-analyze-server"
version = "0.1.0"
description = "This package provides a tool to analyze ROS launchfiles."
authors = ["Y.Hisaki <yhisaki31@gmail.com>"]
readme = "README.md"
repository = "https://github.com/roslaunch-analyzer/roslaunch-analyze-server.git"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.3"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
typer = "^0.12.3"

[tool.poetry.scripts]
roslaunch-analyze-server = "roslaunch_analyze_server.cli:cli"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
isort = "^5.13.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
